# liquid-host

./: .dockerignore  .gitignore  Dockerfile  README.md  mcp_servers.json  pyproject.toml
deploy/: deploy_hf.py  entrypoint.py
liquid_host/: __init__.py  config.py  mcp_client.py
liquid_host.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
liquid_host/cli/: main.py
liquid_host/models/: llamacpp_backend.py  manager.py
liquid_host/server/: app.py
liquid_host/server/static/: index.html  tools.html  training.html
liquid_host/training/: finetune.py
